Jumping div fixed. Font style added.

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     }
 
     body {
+      font-family: 'Quicksand', sans-serif;
       margin-top: 0px;
       padding: 10px;
       -webkit-background-size: cover;
@@ -28,8 +29,9 @@
     .cat-box,
     .footer {
       height: contain;
+      min-height: 270px;
     }
-
+    
     .currentdata {
       text-align: left;
     }
@@ -66,6 +68,7 @@
       max-width: 100%;
       border-style: ridge;
       border-color: #f5f5f5cf;
+      border-radius: 10px;
       background-color: rgba(255, 255, 255, 0.181);
       text-align: left;
       color: black;
@@ -91,11 +94,21 @@
       font-size: 18px;
       line-height: 1.5;
       border-style: outset;
+      border-radius: 15px;
       border-color: #f5f5f5cf;
       background-color: #f5f5f5;
       color: black;
+      transition-duration: 0.5s;
+      cursor: default;
     }
-
+    button:hover {
+      background-color: darksalmon;
+    }
+    input {
+      border-radius: 15px;
+      padding: 5px;
+    }
+   
     title {
       margin-left: 3px;
     }
